# rust_me

./: .gitignore  Cargo.toml  package.json  tsconfig.json  webpack.config.js
src/: main.rs
templates/: index.ejs
