[package]
name = "rust_playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_cors = "0.5.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["serve", "json", "tera_templates"]